Reduce line gap and fix theme color

--- a/src/css/pagelayout.css
+++ b/src/css/pagelayout.css
@@ -5,7 +5,7 @@
     --secondary-col-alt: #6e8286;
     --dark-col: #1f3941;
     --dark-col-alt: #050808;
-    --dark-secondary-col: #37919c;
+    --dark-secondary-col: #7ac8d3;
     --dark-secondary-col-alt: #273435;
     --text-col: #fff9f8;
     --text-col-alt: #E9BBB5;
@@ -50,9 +50,9 @@ body::after {
     background: repeating-linear-gradient(
         0deg,
         var(--primary-col),
-        var(--primary-col) 2px,
+        var(--primary-col) 1px,
         transparent 1px,
-        transparent 3px
+        transparent 2px
     );
 }
 
